# devspace

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  prek.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml
.vectorcode/: vectorcode.exclude
demos/: .gitignore  Dockerfile  create_new_worktrees.tape  features.new.tape  features.tape  local_create_new_worktrees.tape
src/: app.rs  cli.rs  config.rs  devspace.rs  dirs.rs  git.rs  github.rs  keymap.rs  lib.rs  logs.rs  main.rs  ui.rs
src/app/: devspace.rs  mod.rs  repo.rs
src/cli/: mod.rs
src/components/: confirm.rs  create_worktree.rs  filter.rs  help.rs  list.rs  mod.rs  pr_worktree.rs  repositories.rs  select_directory.rs  worktrees.rs
src/git/: mod.rs  repository.rs  worktree.rs
src/model/: git.rs  mod.rs
src/ui/: app.rs  create_worktree.rs  devspaces.rs  events.rs  mod.rs  repositories.rs  worktrees.rs
