[package]
name = "devspace"
version = "0.4.2"
edition = "2021"
authors = ["Muzaffar Omer <muzaffar.omer@gmail.com>"]
description = "Tool to create and manage git worktrees"
readme = "README.md"
repository = "https://github.com/muzomer/devspace"
license-file = "LICENSE"
keywords = ["git", "worktree", "workspace"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.29", features = ["derive", "env"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
expand-tilde = "0.6.1"
git2 = "0.20.0"
lazy_static = "1.5.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.13"
pretty_assertions = "1.4.0"
tempfile = "3.17.1"
